apps/netbox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox
  namespace: netbox
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: netbox
  template:
    metadata:
      labels:
        app: netbox
    spec:
      enableServiceLinks: false
      securityContext:
        runAsUser: 0
      containers:
        - name: netbox
          image: docker.io/netboxcommunity/netbox:v4.5-4.0.2
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/netbox/config
              readOnly: true
            - name: media
              mountPath: /opt/netbox/netbox/media
          resources:
            limits:
              memory: 2Gi
              cpu: "2"
            requests:
              memory: 512Mi
              cpu: "10m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: netbox-config
        - name: media
          persistentVolumeClaim:
            claimName: netbox-media
