apps/netbox/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-worker
  namespace: netbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbox-worker
  template:
    metadata:
      labels:
        app: netbox-worker
    spec:
      enableServiceLinks: false
      securityContext:
        runAsUser: 0
      containers:
        - name: worker
          image: docker.io/netboxcommunity/netbox:v4.5-4.0.2
          command: ["/opt/netbox/venv/bin/python", "/opt/netbox/netbox/manage.py", "rqworker"]
          volumeMounts:
            - name: config
              mountPath: /etc/netbox/config
              readOnly: true
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 128Mi
              cpu: "10m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: netbox-config
