apps/netbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox
  namespace: netbox
spec:
  selector:
    app: netbox
  ports:
    - port: 8080
      targetPort: 8080
