apps/netbox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  namespace: netbox
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: netbox.sanxer.dk
      http:
        paths:
          - backend:
              service:
                name: netbox
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - netbox.sanxer.dk
      secretName: netbox-tls
